2005-12-15  Sebastien Pouliot  <sebastien@ximian.com>

	* DateTime.cs: Added MonoTODO to ctor accepting a Calandar instance.
	* Double.cs: Under 2.0 throw a ArgumentException when parsing with
	 NumberStyles.AllowHexSpecifier. Partial fix for #72221. Added the
	second, simpler, TryParse method (2.0).
	* Single.cs: Added the TryParse methods for 2.0.

2005-12-15  Raja R Harinath  <rharinath@novell.com>

	* Type.cs (IsGenericType): Make virtual.

2005-12-08  Sebastien Pouliot  <sebastien@ximian.com> 

	* AppDomainSetup.cs: ApplicationBase throw exception on get (not on 
	set). New behaviour is more like MS - but most issues (unit tests)
	were really path issues. Fix bug #71291.
	* DateTime.cs: Add more information when throwing an exception in 
	ctor(long). Useful for debugging.

2005-12-07  Zoltan Varga  <vargaz@gmail.com>

	* Single.cs Double.cs: Fix warnings.

2005-12-06  Sebastien Pouliot  <sebastien@ximian.com> 
 
	* Convert.cs: ToBase64String method didn't use the option parameter so
	we always included new lines. Fix bug #76876.

2005-12-06  Sebastien Pouliot  <sebastien@ximian.com>

	* AppDomainSetup.cs: Added missing ComVisible and removed LAMESPEC 
	(the docs were fixed).
	* NumberFormatter.cs: Fixed the "NotWorking" case where 1.15 was 
	misrounded compared to MS implementation. Extra care is required when
	dealing with the extra 2 digits information (e.g. double precision is
	15 digits but 17 are kept - for a reason ;-)

2005-12-05  Ben Maurer  <bmaurer@ximian.com>

	* Environment.cs: Bump version

	* Nullable.cs: New Box and Unbox methods for the jit

2004-12-05  Peter Dennis Bartok <pbartok@novell.com>

	* Enum.cs: Properly handle "No bits set" case even if the sorted numbers
	  list does not have enum value 0 as the first item. Fixes #76921

2005-12-05  Sebastien Pouliot  <sebastien@ximian.com>

	* AppDomain.cs: CreateComInstanceFrom isn't static in any profile.

Mon Dec 5 15:14:59 CET 2005 Paolo Molaro <lupus@ximian.com>
